tests/algorithms/x/C/graphs/scc_kosaraju.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t dfs_len;
size_t dfs2_len;
size_t kosaraju_len;
size_t *kosaraju_lens;

size_t append_len;
static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    append_len = len + 1;
    return res;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * dfs(long long u, long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long * visit, size_t visit_len, long long * stack, size_t stack_len);
long long * dfs2(long long u, long long * * reversed_graph, size_t reversed_graph_len, size_t* reversed_graph_lens, size_t reversed_graph_lens_len, long long * visit, size_t visit_len, long long * component, size_t component_len);
long long * * kosaraju(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len);
void user_main();
int main(void);

long long * dfs(long long u, long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long * visit, size_t visit_len, long long * stack, size_t stack_len) {
    if (visit[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? visit_len + _mochi_idx : _mochi_idx;})]) {
        return dfs_len = stack_len, stack;
    }
    visit[(int)(u)] = 1LL;
    {
        long long* __tmp0 = graph[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? graph_len + _mochi_idx : _mochi_idx;})];
        size_t __tmp0_len = graph_lens[u];
        for (size_t __i = 0; __i < __tmp0_len; __i++) {
            long long v = __tmp0[__i];
            stack = dfs(v, graph, graph_len, graph_lens, graph_len, visit, visit_len, stack, stack_len);
            stack_len = dfs_len;
        }
    }
    stack = list_append_long_long(stack, &stack_len, u);
    return dfs_len = stack_len, stack;
}

long long * dfs2(long long u, long long * * reversed_graph, size_t reversed_graph_len, size_t* reversed_graph_lens, size_t reversed_graph_lens_len, long long * visit, size_t visit_len, long long * component, size_t component_len) {
    if (visit[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? visit_len + _mochi_idx : _mochi_idx;})]) {
        return dfs2_len = component_len, component;
    }
    visit[(int)(u)] = 1LL;
    component = list_append_long_long(component, &component_len, u);
    {
        long long* __tmp1 = reversed_graph[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? reversed_graph_len + _mochi_idx : _mochi_idx;})];
        size_t __tmp1_len = reversed_graph_lens[u];
        for (size_t __i = 0; __i < __tmp1_len; __i++) {
            long long v = __tmp1[__i];
            component = dfs2(v, reversed_graph, reversed_graph_len, reversed_graph_lens, reversed_graph_len, visit, visit_len, component, component_len);
            component_len = dfs2_len;
        }
    }
    return dfs2_len = component_len, component;
}

long long * * kosaraju(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len) {
    long long n = graph_len;
    long long **reversed_graph = NULL;
    size_t reversed_graph_len = 0;
    size_t *reversed_graph_lens = NULL;
    size_t reversed_graph_lens_len = 0;
    long long i = 0LL;
    while (i < n) {
        reversed_graph = list_append_intptr(reversed_graph, &reversed_graph_len, ({long long* tmp = malloc(0 * sizeof(long long)); tmp;}));
        reversed_graph_lens = list_append_szt(reversed_graph_lens, &reversed_graph_lens_len, 0);
        i = i + 1LL;
    }
    i = 0LL;
    while (i < n) {
        {
            long long* __tmp2 = graph[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? graph_len + _mochi_idx : _mochi_idx;})];
            size_t __tmp2_len = graph_lens[i];
            for (size_t __i = 0; __i < __tmp2_len; __i++) {
                long long v = __tmp2[__i];
                reversed_graph[(int)(v)] = list_append_int_new(reversed_graph[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? reversed_graph_len + _mochi_idx : _mochi_idx;})], reversed_graph.lens[(int)(v)], i);
            }
        }
        i = i + 1LL;
    }
    long long *visit = NULL;
    size_t visit_len = 0;
    i = 0LL;
    while (i < n) {
        visit = list_append_long_long(visit, &visit_len, 0LL);
        i = i + 1LL;
    }
    long long *stack = NULL;
    size_t stack_len = 0;
    i = 0LL;
    while (i < n) {
        if (visit[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? visit_len + _mochi_idx : _mochi_idx;})] == 0LL) {
            stack = dfs(i, graph, graph_len, graph_lens, graph_len, visit, visit_len, stack, stack_len);
            stack_len = dfs_len;
        }
        i = i + 1LL;
    }
    i = 0LL;
    while (i < n) {
        visit[(int)(i)] = 0LL;
        i = i + 1LL;
    }
    long long **scc = NULL;
    size_t scc_len = 0;
    size_t *scc_lens = NULL;
    size_t scc_lens_len = 0;
    long long idx = stack_len - 1LL;
    while (idx >= 0LL) {
        long long node = stack[(int)({long long _mochi_idx = idx; _mochi_idx < 0 ? stack_len + _mochi_idx : _mochi_idx;})];
        if (visit[(int)({long long _mochi_idx = node; _mochi_idx < 0 ? visit_len + _mochi_idx : _mochi_idx;})] == 0LL) {
            long long *component = NULL;
            size_t component_len = 0;
            component = dfs2(node, reversed_graph, reversed_graph_len, reversed_graph_lens, reversed_graph_len, visit, visit_len, component, component_len);
            component_len = dfs2_len;
            scc = list_append_intptr(scc, &scc_len, component);
            scc_lens = list_append_szt(scc_lens, &scc_lens_len, component_len);
        }
        idx = idx - 1LL;
    }
    return kosaraju_lens = scc_lens, kosaraju_len = scc_len, scc;
}

void user_main() {
    long long graph_0[1] = {1LL};
    long long graph_1[1] = {2LL};
    long long graph_2[2] = {0LL, 3LL};
    long long graph_3[1] = {4LL};
    long long graph_4[0] = {};
    long long *graph_init[5] = {graph_0, graph_1, graph_2, graph_3, graph_4};
    long long **graph = graph_init;
    size_t graph_len = 5;
    size_t graph_lens_init[5] = {1, 1, 2, 1, 0};
    size_t *graph_lens = graph_lens_init;
    size_t graph_lens_len = 5;
    long long **comps = kosaraju(graph, graph_len, graph_lens, graph_len);
    size_t comps_len = kosaraju_len;
    size_t *comps_lens = kosaraju_lens;
    size_t comps_lens_len = kosaraju_len;
    long long i = 0LL;
    while (i < comps_len) {
        puts(str_list_int(comps[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? comps_len + _mochi_idx : _mochi_idx;})], comps_lens[i]));
        i = i + 1LL;
    }
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
